# mujoco_ros2_control

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  colcon_defaults.yaml  package.xml  pixi.toml
.github/: markdown-link-check.json
.github/workflows/: ci.yaml  coverage.yml  docs.yaml  format.yml  ros-deb-builder.yaml
doc/: .gitignore  README.md  conf.py  development.rst  index.rst  pixi.toml
docker/: Dockerfile  Dockerfile.pixi  build.sh
docs/: DEVELOPMENT.md  TOOLS.md
include/mujoco_ros2_control/: data.hpp  mujoco_cameras.hpp  mujoco_system_interface.hpp
include/mujoco_ros2_simulation/: data.hpp  mujoco_simulate.hpp  mujoco_system_interface.hpp
mujoco_extensions/doc/: mujoco_extensions.rst
mujoco_extensions/mujoco_3d_lidar/: .gitignore  CMakeLists.txt  README.md  package.xml
mujoco_extensions/mujoco_3d_lidar/example/: lidar.xml  scene.xml
mujoco_extensions/mujoco_3d_lidar/include/mujoco_3d_lidar/: 3dlidar.h
mujoco_extensions/mujoco_3d_lidar/src/: 3dlidar.cpp  register.cpp
mujoco_extensions/mujoco_demo_extension/: CMakeLists.txt  README.md  package.xml
mujoco_extensions/mujoco_demo_extension/include/mujoco_demo_extension/: demo_plugin.hpp
mujoco_extensions/mujoco_demo_extension/src/: demo_plugin.cpp  register.cpp
mujoco_plugins/mujoco_3d_lidar_plugin/: CMakeLists.txt  README.md  package.xml
mujoco_plugins/mujoco_3d_lidar_plugin/src/: 3dlidar.cpp  register.cpp
mujoco_ros2_control/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
mujoco_ros2_control/cmake/: DownloadMujoco.cmake
mujoco_ros2_control/docs/: DEVELOPMENT.md  MODELING_ENVIRONMENTS.md  MODELING_TIPS.md  MOVEABLE_OBJECTS.md  OBJECT_MJCFS.md  TOOLS.md  hardware_interface.rst  modeling_tips.rst  tools.rst
mujoco_ros2_control/include/mujoco_ros2_control/: data.hpp  mujoco_cameras.hpp  mujoco_lidar.hpp  mujoco_simulation.hpp  mujoco_system_interface.hpp  sim_display_text.hpp
mujoco_ros2_control/mujoco_ros2_control/: __init__.py  urdf_to_mujoco_utils.py
mujoco_ros2_control/scripts/: make_mjcf_from_robot_description.py  requirements.txt  robot_description_to_mjcf.sh
mujoco_ros2_control/src/: mujoco_cameras.cpp  mujoco_lidar.cpp  mujoco_ros2_control_parameters.yaml  mujoco_simulation.cpp  mujoco_system_interface.cpp
mujoco_ros2_control/test/: CMakeLists.txt  test_headless_init.cpp
mujoco_ros2_control/test/launch/: test_robot.launch.py
mujoco_ros2_control/test/src/: robot_launch_test.py
mujoco_ros2_control/tests/: CMakeLists.txt  test_headless_init.cpp  test_mujoco_simluation.cpp  test_mujoco_simulation.cpp  test_mujoco_system_interface.cpp  test_plugin.cpp  test_urdf_to_mujoco_utils.py
mujoco_ros2_control_demos/: CHANGELOG.rst  README.md  package.xml  pixi.toml
mujoco_ros2_control_demos/config/: controllers.yaml  mujoco_ros2_control_plugins.yaml  simulation_parameters.yaml
mujoco_ros2_control_demos/demo_resources/: test_robot.urdf  test_robot.xml
mujoco_ros2_control_demos/demo_resources/mjcf_generation/: test_inputs.xml
mujoco_ros2_control_demos/doc/: tutorials.rst
mujoco_ros2_control_demos/launch/: 01_basic_robot.launch.py  02_mjcf_generation.launch.py  03_pid_control.launch.py  04_transmissions.launch.py  05_configure_with_ros_parameters.launch.py  demo.launch.py
mujoco_ros2_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
mujoco_ros2_control_msgs/msg/: ConstraintViolations.msg  ExternalWrench.msg  ExternalWrenchArray.msg  FreeJointState.msg  FreeJointStateArray.msg
mujoco_ros2_control_msgs/srv/: ApplyExternalWrench.srv  ResetWorld.srv  SetFreeJointState.srv  SetPause.srv  StepSimulation.srv
mujoco_ros2_control_plugins/: CHANGELOG.rst  CMakeLists.txt  README.md  mujoco_ros2_control_plugins.xml  package.xml
mujoco_ros2_control_plugins/doc/: plugins.rst
mujoco_ros2_control_plugins/include/mujoco_ros2_control_plugins/: camera_plugin.hpp  constraint_violations_publisher_plugin.hpp  external_wrench_plugin.hpp  heartbeat_publisher_plugin.hpp  mujoco_3d_lidar_plugin.hpp  mujoco_ros2_control_plugins_base.hpp  rangefinder_lidar_plugin.hpp
mujoco_ros2_control_plugins/src/: camera_plugin.cpp  camera_plugin.hpp  constraint_violations_publisher_plugin.cpp  external_wrench_plugin.cpp  free_joint_state_publisher_plugin.cpp  free_joint_state_publisher_plugin.hpp  heartbeat_publisher_plugin.cpp  mujoco_3d_lidar_plugin.cpp  mujoco_3d_lidar_plugin.hpp  rangefinder_lidar_plugin.cpp  rangefinder_lidar_plugin.hpp
mujoco_ros2_control_plugins/test/: test_3d_lidar_plugin.cpp  test_camera_plugin.cpp  test_constraint_violations_publisher_plugin.cpp  test_external_wrench_plugin.cpp  test_free_joint_state_publisher_plugin.cpp
mujoco_ros2_control_tests/: CHANGELOG.rst  CMakeLists.txt  package.xml  pixi.toml
mujoco_ros2_control_tests/config/: site_velocity_controllers.yaml
mujoco_ros2_control_tests/launch/: site_velocity_test_launch.py  test_launch.py  test_robot.launch.py
mujoco_ros2_control_tests/src/: test_plugin.cpp  test_plugin.xml
mujoco_ros2_control_tests/test/: robot_launch_configure_with_ros_parameters.py  robot_launch_pid_test.py  robot_launch_test.py  site_velocity_launch_test.py
mujoco_ros2_control_tests/test_resources/: test_robot.urdf
mujoco_ros2_control_tests/test_resources/robot/: site_velocity_robot.urdf  site_velocity_robot.xml
mujoco_ros2_control_tests/test_resources/scenes/: site_velocity_scene.xml
resources/: scene.xml
scripts/: make_mjcf_from_robot_description.py  robot_description_to_mjcf.sh
src/: mujoco_cameras.cpp  mujoco_lidar.cpp  mujoco_ros2_control_node.cpp  mujoco_simulate.cpp  mujoco_system_interface.cpp
test/: CMakeLists.txt  test_contact_sensors.cpp
test/config/: controllers.yaml  controllers_pid.yaml  mujoco_pid.yaml
test/launch/: test_robot.launch.py  test_robot_pid.launch.py
test/resources/: test_inputs.xml  test_robot.urdf  test_robot.xml
test/src/: robot_launch_mjcf_generation_from_robot_description_test.py  robot_launch_mjcf_generation_test.py  robot_launch_pid_test.py  robot_launch_test.py
test/test_resources/: test_inputs.xml  test_robot.urdf  test_robot.xml
(+7 files in other folders)
