<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mujoco_3d_lidar</name>
  <version>1.0.0</version>
  <description>Plugin for mujoco to use raycasters to simulate lidar</description>
  <maintainer email="jodi.s.graf@nasa.gov">Jodi Graf</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>mujoco_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
